# liboil

./: .clang-format  .gitignore  Benchmark.cpp  CLAUDE.md  LICENSE  Makefile  OilResample.cpp  OilResample.h  OilResampleAvx2.cpp  OilResampleInternal.h  OilResampleNeon.cpp  OilResampleSse2.cpp  README  README-libjpeg  README.md  README.rdoc  Rakefile  Test.cpp  benchmark.c  benchmark2.c  coeffbench.c  ideas.txt  imgscale.c  jpeg.c  jpgscale.c  oil.c  oil.gemspec  oil.h  oil_libjpeg.c  oil_libjpeg.h  oil_libpng.c  oil_libpng.h  oil_resample.c  oil_resample.h  oil_resample_avx2.c  oil_resample_avx2.h  oil_resample_internal.h  oil_resample_neon.c  oil_resample_sse2.c  oilview.c  (+11 more)
ext/: OilService.java  extconf.rb  jpeg.c  oil.c  oil.h  oilrb.c  png.c  ppm.c  resample.c
oil-rs/: Cargo.toml  build.rs
oil-rs/csrc/: jpeg_glue.c
oil-rs/src/: colorspace.rs  jpeg.rs  jpeg_ffi.rs  kernel.rs  lib.rs  png.rs  scale.rs  srgb.rs  sse2.rs
oil-rs/tests/: jpeg_ffi_test.rs  jpeg_test.rs  png_test.rs  reference.rs
rs/: test.rb
src/: jpgscale.c  pngscale.c  test.c
test/: helper.rb  test_jpeg.rb  test_png.rb  test_ppm.rb  valgrind_suppressions.txt
tools/: linear_to_srgb_table.c  srgb_to_linear_table.c
